{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 63,
  "lineage": "76765bc3-2bad-d8d9-a42a-de8d4ae6cc2c",
  "resources": [
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:485146087273:loadbalancer/app/my-application-lb/c3b6b99f7c32426d",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "my-application-lb",
            "security_groups": [
              "sg-0f750b3ce34bb23c1"
            ],
            "subnets": [
              "subnet-08ae803752311214b",
              "subnet-0fad6e17f3fbd728e"
            ]
          },
          "dependencies": [
            "module.application_load_balancer.aws_security_group.alb_sg",
            "module.pub_subnet_1.aws_subnet.subnets",
            "module.pub_subnet_2.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_http_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_http_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:485146087273:targetgroup/my-application-lb-tg-1/121e4d40eb2865b7",
            "arn_suffix": "targetgroup/my-application-lb-tg-1/121e4d40eb2865b7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:485146087273:targetgroup/my-application-lb-tg-1/121e4d40eb2865b7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-application-lb-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:485146087273:targetgroup/my-application-lb-tg-2/154712fd23f0f942",
            "arn_suffix": "targetgroup/my-application-lb-tg-2/154712fd23f0f942",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:485146087273:targetgroup/my-application-lb-tg-2/154712fd23f0f942",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-application-lb-tg-2",
            "port": 50,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-0f750b3ce34bb23c1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f750b3ce34bb23c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb_sg_name",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg_name"
            },
            "tags_all": {
              "Name": "alb_sg_name"
            },
            "timeouts": null,
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-038a93b85bc3679f1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038a93b85bc3679f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.167.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.167.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 50,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50
              },
              {
                "cidr_blocks": [
                  "192.167.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg_security_group",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_security_group"
            },
            "tags_all": {
              "Name": "asg_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internetgateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:internet-gateway/igw-021170fb8699e07b9",
            "id": "igw-021170fb8699e07b9",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_gw"
            },
            "tags_all": {
              "Name": "kamil_gw"
            },
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c1b33ae911c7947",
            "domain": "vpc",
            "id": "eipalloc-08c1b33ae911c7947",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-20-71-93.compute-1.amazonaws.com",
            "public_ip": "23.20.71.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c1b33ae911c7947",
            "connectivity_type": "public",
            "id": "nat-0bcbe963af139556b",
            "subnet_id": "subnet-08ae803752311214b",
            "tags": {
              "Name": "kamil-gw-NAT"
            },
            "tags_all": {
              "Name": "kamil-gw-NAT"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.eip",
            "module.pub_subnet_1.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priv-rta",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.priv_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-05c2fbf81b07fa233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.167.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c2fbf81b07fa233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_priv_subnet"
            },
            "tags_all": {
              "Name": "kamil_priv_subnet"
            },
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.pub-rta-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b31f2c105ec39e0b",
            "route_table_id": "rtb-09cd036f17b81d443",
            "subnet_id": "subnet-08ae803752311214b"
          },
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.pub_subnet_1.aws_subnet.subnets",
            "module.public-route.aws_route_table.rt",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub-rta-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c45f80a9896bdc0",
            "route_table_id": "rtb-09cd036f17b81d443",
            "subnet_id": "subnet-0fad6e17f3fbd728e"
          },
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.pub_subnet_2.aws_subnet.subnets",
            "module.public-route.aws_route_table.rt",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-08ae803752311214b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.167.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae803752311214b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_pub_subnet1"
            },
            "tags_all": {
              "Name": "kamil_pub_subnet1"
            },
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-0fad6e17f3fbd728e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.167.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fad6e17f3fbd728e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_pub_subnet2"
            },
            "tags_all": {
              "Name": "kamil_pub_subnet2"
            },
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:route-table/rtb-09cd036f17b81d443",
            "id": "rtb-09cd036f17b81d443",
            "owner_id": "485146087273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021170fb8699e07b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kamil_pub_rt"
            },
            "tags_all": {
              "Name": "kamil_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internetgateway.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:485146087273:instance/i-0c5cc00421a7e5d7e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5cc00421a7e5d7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04279e93b166f6a9f"
              }
            ],
            "primary_network_interface_id": "eni-04279e93b166f6a9f",
            "private_dns": "ip-192-167-1-11.ec2.internal",
            "private_ip": "192.167.1.11",
            "public_ip": "3.84.231.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cb70f774f0788ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ae803752311214b",
            "tags": {
              "Name": "kamil_pub_ec2_instance"
            },
            "tags_all": {
              "Name": "kamil_pub_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0004d15c7adeee631"
            ]
          },
          "dependencies": [
            "module.pub_subnet_1.aws_subnet.subnets",
            "module.public_ec2.aws_network_interface.pub_nic",
            "module.public_ec2.aws_security_group.pub_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pub_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:network-interface/eni-04279e93b166f6a9f",
            "id": "eni-04279e93b166f6a9f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:41:22:5a:4f:8b",
            "owner_id": "485146087273",
            "private_ip": "192.167.1.11",
            "private_ip_list": [
              "192.167.1.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.167.1.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0004d15c7adeee631"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ae803752311214b"
          },
          "dependencies": [
            "module.pub_subnet_1.aws_subnet.subnets",
            "module.public_ec2.aws_security_group.pub_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-0004d15c7adeee631",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0004d15c7adeee631",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_pub_sg",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_for_pub_ec2"
            },
            "tags_all": {
              "Name": "sg_for_pub_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07084ba3a188a20c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:vpc/vpc-07084ba3a188a20c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.167.0.0/16",
            "default_network_acl_id": "acl-00e51151457a82d04",
            "default_route_table_id": "rtb-0443b28dee6edf020",
            "default_security_group_id": "sg-0a7e3b977240c849c",
            "dhcp_options_id": "dopt-033d2b1ddea21925e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07084ba3a188a20c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0443b28dee6edf020",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_vpc"
            },
            "tags_all": {
              "Name": "kamil_vpc"
            }
          }
        }
      ]
    }
  ]
}